--- a/frontend/dataset.html
+++ b/frontend/dataset.html
@@ -52,7 +52,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:100px"></a>
+                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:130px"></a>
                                 <!-- <div>NetREx</div> -->
                             </div>
                         </div>
@@ -63,11 +63,12 @@
                                     <ul id="navigation">    
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="overview.html">Overview</a></li>
-                                        <li><a href="query.html">Visualise</a>
-                                            <!-- <ul class="submenu">
-                                                <li><a href="query.html/network-viewer">Network Viewer</a></li>
-                                                <li><a href="query.html/module-viewer">Module Viewer</a></li>
-                                            </ul> -->
+                                        <li><a href="query.html">Query</a>
+                                        <li><a>Browse</a>
+                                            <ul class="submenu">
+                                                <li><a href="module.html">Module Wise</a></li>
+                                                <li><a href="condition.html">Condition Wise</a></li>
+                                            </ul>
                                         </li>
                                         <li class="active"><a href="dataset.html">Datasets</a></li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -106,7 +107,7 @@
 	<div class="whole-wrap">
 		<div class="container box_1170">
 			<div class="section-top-border">
-				<h3 class="mb-30">Fold Change And p-Values</h3>
+				<h3 class="mb-30">Fold Change and p-value of DEGs</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
@@ -134,18 +135,18 @@
 					</div>
 				</div>
 
-				<h3 class="mb-30">Root Stress Networks</h3>
+				<h3 class="mb-30">Node list for Root Tissue</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
 							<div class="serial">#</div>
-							<div class="country">Title</div>
+							<div class="country">Abiotic Stress</div>
 							<div class="visit">Format</div>
 							<div class="percentage">Link</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
-							<div class="country">General HRR</div>
+							<div class="country">Global HRR</div>
 							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/root_HRR_100.txt" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
@@ -202,18 +203,18 @@
 					</div>
 				</div>
 
-				<h3 class="mb-30">Shoot Stress Networks</h3>
+				<h3 class="mb-30">Node list for Shoot Tissue</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
 							<div class="serial">#</div>
-							<div class="country">Title</div>
+							<div class="country">Abiotic Stress</div>
 							<div class="visit">Format</div>
 							<div class="percentage">Link</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
-							<div class="country">General HRR</div>
+							<div class="country">Global HRR</div>
 							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/shoot_HRR_100.txt" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
@@ -301,7 +302,7 @@
 								 <ul>
 									 <li><a href="index.html">Home</a></li>
 									 <li><a href="overview.html">About</a></li>
-									 <li><a href="query.html">Visualise</a></li>
+									 <li><a href="query.html">Query</a></li>
 									 <li><a href="datasets.html">Datasets</a></li>
 									 <li><a href="contact.html">Contact</a></li>
 								 </ul>
