--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:100px"></a>
+                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:130px"></a>
                                 <!-- <div>NetREx</div> -->
                             </div>
                         </div>
@@ -59,11 +59,12 @@
                                     <ul id="navigation">    
                                         <li class="active"><a href="index.html">Home</a></li>
                                         <li><a href="overview.html">Overview</a></li>
-                                        <li><a href="query.html">Visualise</a>
-                                            <!-- <ul class="submenu">
-                                                <li><a href="query.html/network-viewer">Network Viewer</a></li>
-                                                <li><a href="query.html/module-viewer">Module Viewer</a></li>
-                                            </ul> -->
+                                        <li><a href="query.html">Query</a>
+                                        <li><a>Browse</a>
+                                            <ul class="submenu">
+                                                <li><a href="module.html">Module Wise</a></li>
+                                                <li><a href="condition.html">Condition Wise</a></li>
+                                            </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -92,7 +93,7 @@
                         <div class="row d-flex align-items-center">
                             <div class="col-lg-6 col-md-9 ">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay=".4s">Rice Expression Analysis</span>
+                                    <span data-animation="fadeInUp" data-delay=".4s" style="font-size: 20px;font-weight: 600;">Rice Expression Analysis</span>
                                     <h1 data-animation="fadeInUp" data-delay=".6s">Explore Rice genes<br>with NetREx</h1>
                                     <p data-animation="fadeInUp" data-delay=".8s">A Network-based Rice Expression Analysis Server for Abiotic Stress Conditions. Query rice genes playing key features in different conditions</p>
                                     <!-- Slider btn -->
@@ -100,7 +101,7 @@
                                         <!-- Hero-btn -->
                                         <a data-animation="fadeInLeft" data-delay="1.0s" href="query.html" class="btn radius-btn">Query</a>
                                         <!-- Video Btn -->
-                                        <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a>
+                                        <!-- <a data-animation="fadeInRight" data-delay="1.0s" class="popup-video video-btn ani-btn" href="https://www.youtube.com/watch?v=1aP-TXUpNoU"><i class="fas fa-play"></i></a> -->
                                    </div>
                                 </div>
                             </div>
@@ -359,7 +360,7 @@
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
                                     <li><a href="overview.html">About</a></li>
-                                    <li><a href="query.html">Visualise</a></li>
+                                    <li><a href="query.html">Query</a></li>
                                     <li><a href="datasets.html">Datasets</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
