--- a/frontend/overview.html
+++ b/frontend/overview.html
@@ -52,7 +52,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:100px"></a>
+                                <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:130px"></a>
                                 <!-- <div>NetREx</div> -->
                             </div>
                         </div>
@@ -63,11 +63,12 @@
                                     <ul id="navigation">    
                                         <li><a href="index.html">Home</a></li>
                                         <li class="active"><a href="overview.html">Overview</a></li>
-                                        <li><a href="query.html">Visualise</a>
-                                            <!-- <ul class="submenu">
-                                                <li><a href="query.html/network-viewer">Network Viewer</a></li>
-                                                <li><a href="query.html/module-viewer">Module Viewer</a></li>
-                                            </ul> -->
+                                        <li><a href="query.html">Query</a>
+                                        <li><a>Browse</a>
+                                            <ul class="submenu">
+                                                <li><a href="module.html">Module Wise</a></li>
+                                                <li><a href="condition.html">Condition Wise</a></li>
+                                            </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
                                         <li><a href="contact.html">Contact</a></li>
@@ -244,7 +245,7 @@
 								 <ul>
 									 <li><a href="index.html">Home</a></li>
 									 <li><a href="overview.html">About</a></li>
-									 <li><a href="query.html">Visualise</a></li>
+									 <li><a href="query.html">Query</a></li>
 									 <li><a href="datasets.html">Datasets</a></li>
 									 <li><a href="contact.html">Contact</a></li>
 								 </ul>
