--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -291,6 +291,18 @@
 											<label for="originalN"></label>
 										</div>
 									</div>
+
+									<div class="switch-wrap justify-content-between">
+										<p>Other Conditions</p>
+										<div class="switch-wrap d-flex justify-content-between">
+											<div id="otherCondHeadN">
+												<select name="cond" id="otherCondN">
+													<option value="">- Conditions -</option>
+												</select>
+											</div>
+										</div>
+										<a id="loadN" class="genric-btn success circle">Load</a>
+									</div>
 									
 									<div class="button-group-area mt-40">
 										<a id="downloadimgN" class="genric-btn success circle">Download Image</a>
