--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -349,9 +349,12 @@
 				<div id="expression-view" style="display: none;">
 					<div id='expressionchart'></div>
 					<div id='expressionopts'></div>
+					<p>Expression Gradient</p>
 
 					<div id='pvaluechart'></div>
 					<div id='pvalueopts'></div>
+					<p>P-value Gradient</p>
+
 				</div>
 			</div>
 			<!-- End Expression Areaa -->
