--- a/frontend/condition.html
+++ b/frontend/condition.html
@@ -115,8 +115,8 @@
 
 			<div class="row">
 				<div class="col-lg-8">
+					<!-- <form class="form-contact" action="/netrex/load" id="conditionForm"> -->
 					<form class="form-contact" action="/load" id="conditionForm">
-					<!-- </form class="form-contact" action="/netrex/network" method="post"> -->
 						<div class="row">
 
 							<div class="input-group-icon col-sm-12">
