--- a/frontend/module.html
+++ b/frontend/module.html
@@ -117,6 +117,7 @@
 
 			<div class="row">
 				<div class="col-lg-8">
+					<!-- <form class="form-contact" action="/netrex/module" id="moduleForm"> -->
 					<form class="form-contact" action="/module" id="moduleForm">
 						<div class="row">
 
@@ -143,7 +144,6 @@
 						</div>
 						<div class="form-group mt-3">
 							<button type="submit" class="button boxed-btn">Send</button>
-							<!-- <button type="reset" class="button boxed-btn">Reset</button> -->
 						</div>
 					</form>
 				</div>
@@ -158,7 +158,6 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class="section-top-border"></div> -->
 
 			<div class="container box_1170" id="loading-image" style="display: none;">
 				<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched. It'll take less than a minute...</p>
