--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,7 @@
                                             <ul class="submenu">
                                                 <li><a href="module.html">Module Wise</a></li>
                                                 <li><a href="condition.html">Condition Wise</a></li>
+                                                <li><a href="pathway.html">Pathway Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
