--- a/frontend/query.html
+++ b/frontend/query.html
@@ -220,6 +220,9 @@
 						<div class="input-group-icon col-sm-12">
 							<a href="condition.html" class="button boxed-btn" style="margin-top: 20px;">Browse by Stress Condition</a>
 						</div>
+						<div class="input-group-icon col-sm-12">
+							<a href="pathway.html" class="button boxed-btn" style="margin-top: 20px;">Browse by Pathways</a>
+						</div>
 					</div>
 				</div>
 			</div>
